--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/head": "^2.0.0",
     "core-js": "^3.8.3",
+    "github-markdown-css": "^5.8.1",
+    "highlight.js": "^11.11.1",
     "lucide-vue-next": "^0.484.0",
+    "marked": "^15.0.7",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
   },
